api: accept sanitized commit messages (bug 1548610)
Add an API operation that accepts sanitized commit messages for
revisions.  Executing the operation kicks of the sec-approval workflow.
